--- a/ConferencesBook/kscpt.html
+++ b/ConferencesBook/kscpt.html
@@ -25,7 +25,7 @@
 
 <meta name="author" content="Sungpil Han, M.D./Ph.D.">
 
-<meta name="date" content="2016-10-14">
+<meta name="date" content="2016-10-19">
 
 <script type="text/x-mathjax-config">
 MathJax.Hub.Config({
@@ -81,17 +81,16 @@ MathJax.Hub.Config({
 <li class="chapter" data-level="6.1" data-path="-fda-.html"><a href="-fda-.html#-center-for-bioimaging-of-new-drug-development-amc"><i class="fa fa-check"></i><b>6.1</b> 김정곤 Center for Bioimaging of New Drug Development AMC</a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="kscpt.html"><a href="kscpt.html"><i class="fa fa-check"></i><b>7</b> 2016 KSCPT</a><ul>
-<li class="chapter" data-level="7.1" data-path="kscpt.html"><a href="kscpt.html#opening-remark"><i class="fa fa-check"></i><b>7.1</b> Opening Remark</a></li>
-<li class="chapter" data-level="7.2" data-path="kscpt.html"><a href="kscpt.html#first-session"><i class="fa fa-check"></i><b>7.2</b> First Session</a><ul>
-<li class="chapter" data-level="7.2.1" data-path="kscpt.html"><a href="kscpt.html#precision-medicine-a-clinical-pharmacological-perspective"><i class="fa fa-check"></i><b>7.2.1</b> 13:20~14:00 Precision Medicine: A Clinical Pharmacological Perspective</a></li>
-<li class="chapter" data-level="7.2.2" data-path="kscpt.html"><a href="kscpt.html#the-role-of-pharmacogenomics-in-drug-development-regulatory-review-and-clinical-practice"><i class="fa fa-check"></i><b>7.2.2</b> 14:00~14:30 The role of pharmacogenomics in drug development, regulatory review and clinical practice</a></li>
-<li class="chapter" data-level="7.2.3" data-path="kscpt.html"><a href="kscpt.html#the-liver-gut-microbiota-axis-modulates-inter-individual-variability-in-xenobiotic-disposition-and-toxicology"><i class="fa fa-check"></i><b>7.2.3</b> 14:30~15:00 The Liver-Gut Microbiota Axis Modulates Inter-Individual Variability in Xenobiotic Disposition and Toxicology</a></li>
+<li class="chapter" data-level="7.1" data-path="kscpt.html"><a href="kscpt.html#first-session"><i class="fa fa-check"></i><b>7.1</b> First Session</a><ul>
+<li class="chapter" data-level="7.1.1" data-path="kscpt.html"><a href="kscpt.html#precision-medicine-a-clinical-pharmacological-perspective"><i class="fa fa-check"></i><b>7.1.1</b> 13:20~14:00 Precision Medicine: A Clinical Pharmacological Perspective</a></li>
+<li class="chapter" data-level="7.1.2" data-path="kscpt.html"><a href="kscpt.html#the-role-of-pharmacogenomics-in-drug-development-regulatory-review-and-clinical-practice"><i class="fa fa-check"></i><b>7.1.2</b> 14:00~14:30 The role of pharmacogenomics in drug development, regulatory review and clinical practice</a></li>
+<li class="chapter" data-level="7.1.3" data-path="kscpt.html"><a href="kscpt.html#the-liver-gut-microbiota-axis-modulates-inter-individual-variability-in-xenobiotic-disposition-and-toxicology"><i class="fa fa-check"></i><b>7.1.3</b> 14:30~15:00 The Liver-Gut Microbiota Axis Modulates Inter-Individual Variability in Xenobiotic Disposition and Toxicology</a></li>
 </ul></li>
-<li class="chapter" data-level="7.3" data-path="kscpt.html"><a href="kscpt.html#second-session"><i class="fa fa-check"></i><b>7.3</b> Second Session</a><ul>
-<li class="chapter" data-level="7.3.1" data-path="kscpt.html"><a href="kscpt.html#the-role-of-stem-cells-in-discovery-and-validation-of-pharmacogenomic-markers"><i class="fa fa-check"></i><b>7.3.1</b> 15:20~15:50 The role of stem cells in discovery and validation of pharmacogenomic markers</a></li>
-<li class="chapter" data-level="7.3.2" data-path="kscpt.html"><a href="kscpt.html#pharmacogenomics-and-epigenomics"><i class="fa fa-check"></i><b>7.3.2</b> 15:50~16:20 Pharmacogenomics and Epigenomics</a></li>
-<li class="chapter" data-level="7.3.3" data-path="kscpt.html"><a href="kscpt.html#emerging-roles-of-human-cyp1b1-in-cancer-growth-and-metastasis"><i class="fa fa-check"></i><b>7.3.3</b> 16:20~16:50 Emerging roles of human CYP1B1 in cancer growth and metastasis</a></li>
-<li class="chapter" data-level="7.3.4" data-path="kscpt.html"><a href="kscpt.html#omics-for-precision-medicine-clinical-implementation-in-oncology"><i class="fa fa-check"></i><b>7.3.4</b> 16:50~17:20 omics for precision Medicine : Clinical Implementation in oncology</a></li>
+<li class="chapter" data-level="7.2" data-path="kscpt.html"><a href="kscpt.html#second-session"><i class="fa fa-check"></i><b>7.2</b> Second Session</a><ul>
+<li class="chapter" data-level="7.2.1" data-path="kscpt.html"><a href="kscpt.html#the-role-of-stem-cells-in-discovery-and-validation-of-pharmacogenomic-markers"><i class="fa fa-check"></i><b>7.2.1</b> 15:20~15:50 The role of stem cells in discovery and validation of pharmacogenomic markers</a></li>
+<li class="chapter" data-level="7.2.2" data-path="kscpt.html"><a href="kscpt.html#pharmacogenomics-and-epigenomics"><i class="fa fa-check"></i><b>7.2.2</b> 15:50~16:20 Pharmacogenomics and Epigenomics</a></li>
+<li class="chapter" data-level="7.2.3" data-path="kscpt.html"><a href="kscpt.html#emerging-roles-of-human-cyp1b1-in-cancer-growth-and-metastasis"><i class="fa fa-check"></i><b>7.2.3</b> 16:20~16:50 Emerging roles of human CYP1B1 in cancer growth and metastasis</a></li>
+<li class="chapter" data-level="7.2.4" data-path="kscpt.html"><a href="kscpt.html#omics-for-precision-medicine-clinical-implementation-in-oncology"><i class="fa fa-check"></i><b>7.2.4</b> 16:50~17:20 omics for precision Medicine : Clinical Implementation in oncology</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="8" data-path="translation-and-convergence-for-future-medicine.html"><a href="translation-and-convergence-for-future-medicine.html"><i class="fa fa-check"></i><b>8</b> “Translation and Convergence for Future Medicine”</a><ul>
@@ -245,19 +244,14 @@ MathJax.Hub.Config({
 <img src="images/2016KSCPT.jpg" alt="Materials" />
 <p class="caption">Materials</p>
 </div>
-<div id="opening-remark" class="section level2">
-<h2><span class="header-section-number">7.1</span> Opening Remark</h2>
-<ul>
-<li>Yil-Seob Lee (president of KSCPT)</li>
-</ul>
-</div>
+<p><strong>Opening Remark</strong> - Yil-Seob Lee (president of KSCPT)</p>
 <div id="first-session" class="section level2">
-<h2><span class="header-section-number">7.2</span> First Session</h2>
+<h2><span class="header-section-number">7.1</span> First Session</h2>
 <ul>
 <li>Chair : Deborah Chee(KoNECT)</li>
 </ul>
 <div id="precision-medicine-a-clinical-pharmacological-perspective" class="section level3">
-<h3><span class="header-section-number">7.2.1</span> 13:20~14:00 Precision Medicine: A Clinical Pharmacological Perspective</h3>
+<h3><span class="header-section-number">7.1.1</span> 13:20~14:00 Precision Medicine: A Clinical Pharmacological Perspective</h3>
 <ul>
 <li>Speaker: <a href="https://en.wikipedia.org/wiki/Munir_Pirmohamed">Munir Pirmohamed</a> (University of Liverpool, UK)</li>
 <li>Fava beans - Favism G6PD deficiency - withrawal of antimalarials</li>
@@ -266,40 +260,42 @@ MathJax.Hub.Config({
 <li>Mandatory genomic testing - EMA SmPC</li>
 <li>Pharmacogenomics Journal (2015) 1-10</li>
 <li>Crizotinib vs CTx in advanced ALK+ lung cancer (NEJM 2013)</li>
-<li>Novel trial design (Nature 2015)</li>
-</ul>
+<li>Novel trial design (Nature 2015)
 <ol style="list-style-type: decimal">
 <li>Umbrella trial (single tumor - multiple arm - multiple drugs)</li>
 <li>Basket study</li>
-</ol>
-<ul>
+</ol></li>
 <li>Support of humen genetic evidence for approved drug indication (Nature Genetics)</li>
 <li>Sclerosteosis - skeletal overgrowth and syndactyly, AR , mutations in SOST gene - target sclerostin</li>
 <li>anti-sclerostin Ab (ROMOSOZUMAB, BLOSOZUMAB) - bone density increase - mouse</li>
-<li>New cardiovascular targets</li>
+<li>New cardiovascular targets
+<ul>
 <li>PCSK9 - GOF-&gt;LDL-C increase &amp; CVD</li>
 <li>ANGPTL4</li>
-<li>HLA-genotype and carbamazepine-induced cutaneous ADR: systemic review (CPT,2012)</li>
+</ul></li>
+<li>HLA-genotype and carbamazepine-induced cutaneous ADR: systemic review (CPT,2012)
+<ul>
 <li>ITCH (Drug hypersensitivity)</li>
 <li>Phase I, II - very strong association (Manhattan plot) - GWAS - ALK(germline polymorphism-&gt; T cell expansion)</li>
 <li>SJS GWAS (Genin 2011) <a href="http://www.ncbi.nlm.nih.gov/pubmed/21801394" class="uri">http://www.ncbi.nlm.nih.gov/pubmed/21801394</a></li>
 <li>Skin, Liver</li>
 <li>CBZ-induced hypersensitivity vs CBZ-tolerant patients</li>
 <li>HLA-A*31:01(thirtyone o one)</li>
+</ul></li>
 <li>HLA and ADR</li>
 <li>The effect of pharmacogenetic profiling with a clinical decision support tool on healthcare resource utilization and estimated costs in the elderly exposed to polypharmacy. (2016) <a href="http://www.ncbi.nlm.nih.gov/pubmed/26478982" class="uri">http://www.ncbi.nlm.nih.gov/pubmed/26478982</a></li>
 <li>Somatic genomes -&gt; microbiome is also important</li>
 <li>Digoxin and antibiotics (1981, NEJM) -&gt; (2013 Science) Cardiac drug inactivation by human gut bacteria</li>
 <li>Microbiome and Cancer Immunotherapy - Snyder, Science Nov 2015</li>
-<li>Two books introduced.</li>
-</ul>
+<li>Two books introduced.
 <ol style="list-style-type: decimal">
 <li>Prescription for nhs</li>
 <li>clinical pharma dynamic medical specialty</li>
-</ol>
+</ol></li>
+</ul>
 </div>
 <div id="the-role-of-pharmacogenomics-in-drug-development-regulatory-review-and-clinical-practice" class="section level3">
-<h3><span class="header-section-number">7.2.2</span> 14:00~14:30 The role of pharmacogenomics in drug development, regulatory review and clinical practice</h3>
+<h3><span class="header-section-number">7.1.2</span> 14:00~14:30 The role of pharmacogenomics in drug development, regulatory review and clinical practice</h3>
 <ul>
 <li>Speaker: Shiew-Mei Huang (North Potomac, MD, USA)</li>
 <li>CPIC (Clinical pharmacogenetics guidelines)</li>
@@ -320,15 +316,10 @@ MathJax.Hub.Config({
 <li>Cleared or approved FDA</li>
 <li>CLIA-certified laboratory</li>
 </ul>
-<div id="my-question" class="section level4">
-<h4><span class="header-section-number">7.2.2.1</span> My Question</h4>
-<ul>
-<li>One NGS - individual test to is there a review of all-in-one Test in progress?</li>
-</ul>
-</div>
+<p><strong>My Question</strong> - One NGS - individual test to is there a review of all-in-one Test in progress?</p>
 </div>
 <div id="the-liver-gut-microbiota-axis-modulates-inter-individual-variability-in-xenobiotic-disposition-and-toxicology" class="section level3">
-<h3><span class="header-section-number">7.2.3</span> 14:30~15:00 The Liver-Gut Microbiota Axis Modulates Inter-Individual Variability in Xenobiotic Disposition and Toxicology</h3>
+<h3><span class="header-section-number">7.1.3</span> 14:30~15:00 The Liver-Gut Microbiota Axis Modulates Inter-Individual Variability in Xenobiotic Disposition and Toxicology</h3>
 <ul>
 <li>Speaker: Eric Chun Yong Chan (National University of Singapore)</li>
 <li>Liver - major organ for disposition and detoxification</li>
@@ -364,12 +355,12 @@ MathJax.Hub.Config({
 </div>
 </div>
 <div id="second-session" class="section level2">
-<h2><span class="header-section-number">7.3</span> Second Session</h2>
+<h2><span class="header-section-number">7.2</span> Second Session</h2>
 <ul>
 <li>Chair : Yong-Bok Lee(Chonnam National University)</li>
 </ul>
 <div id="the-role-of-stem-cells-in-discovery-and-validation-of-pharmacogenomic-markers" class="section level3">
-<h3><span class="header-section-number">7.3.1</span> 15:20~15:50 The role of stem cells in discovery and validation of pharmacogenomic markers</h3>
+<h3><span class="header-section-number">7.2.1</span> 15:20~15:50 The role of stem cells in discovery and validation of pharmacogenomic markers</h3>
 <ul>
 <li>Speaker : Eileen Dolan (The University of Chicago, USA)</li>
 <li>Ototoxicity, CTx Toxicity - hearing loss, peripheral neuropathy</li>
@@ -397,14 +388,14 @@ MathJax.Hub.Config({
 <li>knockdown of CEP72 in iPCSC -&gt; enhancing sensitivity to vincristine</li>
 </ul>
 <div id="questions---neurite-outgrowth" class="section level4">
-<h4><span class="header-section-number">7.3.1.1</span> Questions - neurite outgrowth</h4>
+<h4><span class="header-section-number">7.2.1.1</span> Questions - neurite outgrowth</h4>
 <ul>
 <li>Neurons- mature enough?</li>
 </ul>
 </div>
 </div>
 <div id="pharmacogenomics-and-epigenomics" class="section level3">
-<h3><span class="header-section-number">7.3.2</span> 15:50~16:20 Pharmacogenomics and Epigenomics</h3>
+<h3><span class="header-section-number">7.2.2</span> 15:50~16:20 Pharmacogenomics and Epigenomics</h3>
 <ul>
 <li>Speaker: Matthias Schwab (IKP Stuttgart, Germany)</li>
 <li>Prognostic predictors</li>
@@ -422,16 +413,10 @@ MathJax.Hub.Config({
 <li>CPT 2016, Fisel, Schaeffeler, Schwab - DNA methylation and its impact on disease pathophysioloy and drug therapy</li>
 <li>Heatmap - ADME genes - SLC transporters</li>
 </ul>
-<div id="my-quesion" class="section level4">
-<h4><span class="header-section-number">7.3.2.1</span> My Quesion</h4>
-<ul>
-<li>Can we develop therapeutics which target locus of epigenetic (Decitabine)- Renal cancer cell - treatment of decitabine - demethylating agents (Specificity?)</li>
-<li>Epigenomics</li>
-</ul>
-</div>
+<p><strong>My Quesion</strong> - Can we develop therapeutics which target locus of epigenetic (Decitabine)- Renal cancer cell - treatment of decitabine - demethylating agents (Specificity?) - Epigenomics</p>
 </div>
 <div id="emerging-roles-of-human-cyp1b1-in-cancer-growth-and-metastasis" class="section level3">
-<h3><span class="header-section-number">7.3.3</span> 16:20~16:50 Emerging roles of human CYP1B1 in cancer growth and metastasis</h3>
+<h3><span class="header-section-number">7.2.3</span> 16:20~16:50 Emerging roles of human CYP1B1 in cancer growth and metastasis</h3>
 <ul>
 <li>Speaker: Young-Jin Chun (Chung-Ang University, KOREA)</li>
 <li>P450 (CYP1B1)</li>
@@ -447,14 +432,13 @@ MathJax.Hub.Config({
 <li>억제 - Mithramycin A</li>
 <li>촉진 - DMBA, CYP1B1, SP1, 4OHE</li>
 <li>Matrigel, migration -&gt; migration, invasion</li>
+<li>1B1에 의해 대사되는 irinotecan - 알수가 없다. Tumor 조직을 갖고 enzyme activity 측정전에.</li>
+<li>active metabolism</li>
+<li>2D6는 steroid</li>
 </ul>
-<div id="section" class="section level4">
-<h4><span class="header-section-number">7.3.3.1</span> </h4>
-<p>1B1에 의해 대사되는 irinotecan - 알수가 없다. Tumor 조직을 갖고 enzyme activity 측정전에. active metabolism 2D6는 steroid</p>
-</div>
 </div>
 <div id="omics-for-precision-medicine-clinical-implementation-in-oncology" class="section level3">
-<h3><span class="header-section-number">7.3.4</span> 16:50~17:20 omics for precision Medicine : Clinical Implementation in oncology</h3>
+<h3><span class="header-section-number">7.2.4</span> 16:50~17:20 omics for precision Medicine : Clinical Implementation in oncology</h3>
 <ul>
 <li>Speaker: Kyu-pyo Kim (University of Ulsan College of Medicine, KOREA)</li>
 <li>effects are not immediate / severe adverse effects / narrow therapeutic window</li>
